[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/prefabs/interactables/interactable_base.gd" type="Script" id=1]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 1.5, 2, 0.5 )

[node name="root" type="Spatial"]
script = ExtResource( 1 )

[node name="outer_area" type="Area" parent="."]

[node name="collision" type="CollisionShape" parent="outer_area"]
shape = SubResource( 1 )

[node name="inner_area" type="Area" parent="."]
collision_layer = 17
collision_mask = 17

[node name="collision" type="CollisionShape" parent="inner_area"]
shape = SubResource( 1 )
[connection signal="body_entered" from="outer_area" to="." method="_on_outer_area_body_entered"]
[connection signal="body_exited" from="outer_area" to="." method="_on_outer_area_body_exited"]
[connection signal="area_entered" from="inner_area" to="." method="_on_inner_area_area_entered"]
[connection signal="area_exited" from="inner_area" to="." method="_on_inner_area_area_exited"]
[connection signal="body_entered" from="inner_area" to="." method="_on_inner_area_body_entered"]
[connection signal="body_exited" from="inner_area" to="." method="_on_inner_area_body_exited"]
